--- a/Style/classique.css
+++ b/Style/classique.css
@@ -77,7 +77,7 @@
     display: block;
     list-style: none;
   }
-  
+ 
   .submenu:hover .menuDeroulant {
     display: flex;
     flex-direction: column;
@@ -97,7 +97,10 @@
     color: black;
   }
   
-/* Styles pour le menu responsive */
+
+
+ /* RESPONSIVE */
+/* TÉLÉPHONE */
 @media screen and (max-width: 767px) {
   .navLogo {
       width: 40px;
@@ -105,65 +108,74 @@
       display: block;
   }
   .navbar{
-    display: block;
+    height: 50px;
   }
   .navLogo img {
       width: 100%;
       height: 100%;
   }
+
   .burgerMenu {
       display: block;
-      position: absolute;
-      top:0;
-      right: 0;
   }
+
   .navMenu {
-     
+      display: none;
       flex-direction: column;
       width: 100%;
       position: absolute;
-      top: 7vh;
+      top: 5vh;
       left: 0;
       background-color: #171816ae;
       color: white;
       list-style: none;
+      z-index: 999; /* Assurez-vous que le menu est au-dessus des autres éléments */
   }
+
   .navMenu.active {
       display: flex;
   }
+
   .menuDeroulant {
       display: none;
       flex-direction: column;
       list-style: none;
       color: white;
+      background-color: #171816ae; /* Ajoutez une couleur de fond pour les sous-menus */
   }
+
+  .submenu .menuDeroulant {
+      position: static; /* Assurez-vous que les sous-menus sont positionnés statiquement */
+  }
+
   .submenu:hover .menuDeroulant,
   .submenu .menuDeroulant.active {
       display: flex;
   }
+
   .navMenu li {
       width: 100%;
       text-align: center;
       padding: 10px;
       color: white;
   }
+.logoHome{
+  display: none;
+}
   .burger-menu img {
       height: 40px;
       width: 40px;
   }
-  .burger-menu {
-    display: block;
-  }
+
   .navMenu a, .menuDeroulant a {
-      color: white; /* Assure que le texte des liens est en blanc */
-      text-decoration: none; /* Supprime la décoration des liens */
+      color: white;
+      text-decoration: none;
+      padding: 10px; /* Ajoutez du padding pour les liens du menu */
   }
-  .navMenu .submenu > a{
- color: red;
-  }
+
   .navMenu a:hover, .menuDeroulant a:hover {
       background-color: #f1f1f1;
-      color: black; /* Change la couleur du texte au survol pour une meilleure visibilité */
+      color: black;
   }
 }
 
@@ -1554,7 +1566,7 @@ width: 65px;
   .backKebab {
     height: 100vh;
     width: 100vw;
-    background-image: url(img/backtablette.png);
+    background-image: url(../img/backtablette.png);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1717,7 +1729,7 @@ width: 65px;
   .backGalette, .backPanini{
     height: 100vh;
     width: 100vw;
-    background-image: url(img/backtablette.png);
+    background-image: url(../img/backtablette.png);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1876,7 +1888,7 @@ margin-top: 5px;
 .backSandwich {
   height: 100vh;
   width: 100vw;
-  background-image: url(img/backtablette.png);
+  background-image: url(../img/backtablette.png);
   background-color: black;
   display: flex;
   flex-direction: column; /* Les enfants sont disposés en colonne */
@@ -2021,7 +2033,7 @@ margin-left: 20px;
 .backEnfant {
   height: 100vh;
   width: 100vw;
-  background-image: url(img/backtablette.png);
+  background-image: url(../img/backtablette.png);
   background-color: black;
   display: flex;
   flex-direction: column; /* Les enfants sont disposés en colonne */
