--- a/Style/composition.css
+++ b/Style/composition.css
@@ -107,74 +107,83 @@
   }
   
 
-/* Styles pour le menu responsive */
+ /* RESPONSIVE */
+/* TÉLÉPHONE */
 @media screen and (max-width: 767px) {
   .navLogo {
       width: 40px;
       height: 40px;
       display: block;
   }
-  .navbar{
-    display: block;
-  }
+.navbar{
+  height: 50px;
+}
   .navLogo img {
       width: 100%;
       height: 100%;
   }
+
   .burgerMenu {
       display: block;
-      position: absolute;
-      top:0;
-      right: 0;
   }
+
   .navMenu {
-     
+      display: none;
       flex-direction: column;
       width: 100%;
       position: absolute;
-      top: 7vh;
+      top: 5vh;
       left: 0;
       background-color: #171816ae;
       color: white;
       list-style: none;
+      z-index: 999; /* Assurez-vous que le menu est au-dessus des autres éléments */
   }
+
   .navMenu.active {
       display: flex;
   }
+
   .menuDeroulant {
       display: none;
       flex-direction: column;
       list-style: none;
       color: white;
+      /* background-color: #171816ae;  */
   }
+
+  .submenu .menuDeroulant {
+      position: static; /* Assurez-vous que les sous-menus sont positionnés statiquement */
+  }
+
   .submenu:hover .menuDeroulant,
   .submenu .menuDeroulant.active {
       display: flex;
   }
+
   .navMenu li {
       width: 100%;
       text-align: center;
       padding: 10px;
       color: white;
   }
+.logoHome{
+  display: none;
+}
   .burger-menu img {
       height: 40px;
       width: 40px;
   }
-  .burger-menu {
-    display: block;
-  }
+
   .navMenu a, .menuDeroulant a {
-      color: white; /* Assure que le texte des liens est en blanc */
-      text-decoration: none; /* Supprime la décoration des liens */
+      color: white;
+      text-decoration: none;
+      padding: 10px; /* Ajoutez du padding pour les liens du menu */
   }
-  .navMenu .submenu > a{
- color: white;
- font-weight: bold;
-  }
+
   .navMenu a:hover, .menuDeroulant a:hover {
       background-color: #f1f1f1;
-      color: black; /* Change la couleur du texte au survol pour une meilleure visibilité */
+      color: black;
   }
 }
 
@@ -192,7 +201,7 @@
     height: 100vh;
     width: 100vw;
     display: flex;
-    background-image: url(img/pagetacos.png);
+    background-image: url(../img/pagetacos.png);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -351,7 +360,7 @@
     height: 100vh;
     width: 100vw;
     display: flex;
-    background-image: url(img/pagetacosbowl.png);
+    background-image: url(../img/pagetacosbowl.png);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -365,7 +374,7 @@
     height: 100vh;
     width: 100vw;
     display: flex;
-    background-image: url(img/lekapsalon2.png);
+    background-image: url(../img/lekapsalon2.png);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -398,7 +407,7 @@
     height: 100vh;
     width: 100vw;
     display: flex;
-    background-image: url(img/lassiette.png);
+    background-image: url(../img/lassiette.png);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -540,7 +549,7 @@
     height: 100vh;
     width: 100vw;
     display: flex;
-    background-image: url(img/lacarbonnade.png);
+    background-image: url(../img/lacarbonnade.png);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -716,7 +725,7 @@
   .backTacos, .backTacosbowl, .backKapsalon{
     height: 100vh;
     width: 100vw;
-    background-image: url(img/backtelephone.png);
+    background-image: url(../img/backtelephone.png);
     background-color: black;
     display: flex;
     flex-direction: column; /* Les enfants sont disposés en colonne */
@@ -903,7 +912,7 @@
   .backAssiette {
     height: 100vh;
     width: 100vw;
-    background-image: url(img/backtelephone.png);
+    background-image: url(../img/backtelephone.png);
     background-color: black;
     display: flex;
     flex-direction: column; /* Les enfants sont disposés en colonne */
@@ -923,7 +932,7 @@
   .backCarbonnade {
     height: 100vh;
     width: 100vw;
-    background-image: url(img/backtelephone.png);
+    background-image: url(../img/backtelephone.png);
     display: flex;
     flex-direction: column; /* Les enfants sont disposés en colonne */
     align-items: center; /* Centre les enfants horizontalement */
@@ -1062,7 +1071,7 @@
   .backTacos, .backTacosbowl, .backAssiette, .backKapsalon{
     height: 100vh;
     width: 100vw;
-    background-image: url(img/backtablette.png);
+    background-image: url(../img/backtablette.png);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1243,7 +1252,7 @@
 .backCarbonnade {
   height: 100vh;
   width: 100vw;
-  background-image: url(img/backtablette.png);
+  background-image: url(../img/backtablette.png);
   display: flex;
   flex-direction: column;
   align-items: center;
