--- a/Style/connexion.css
+++ b/Style/connexion.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(img/backfood.png);
+    background-image: url(../img/backfood.png);
     display: flex;
     flex-direction: column;
     align-items: center; 
@@ -32,15 +32,15 @@ label {
     display: block;
     margin-bottom: 5px;
     color: white;
-    font-size: 1.5em;
-  
+    font-size: 1.5em; 
 }
+
 .connect{
     background-color: rgba(0, 0, 0, 0.381);
     height: 80vh;
     width: 30vw;
-
 }
+
 input{
     width: 150px;
     padding: 10px;
