--- a/Style/composition.css
+++ b/Style/composition.css
@@ -21,15 +21,6 @@
     z-index: 1000;  
   }
   
-  /* .navLogo {
-    width: auto;
-    height: auto;
-  }
-  
-  .navLogo img {
-    width: 30px;
-    height: 30px;
-  } */
   .logoHome{
     margin-left: 15px;
   }
@@ -107,88 +98,11 @@
   }
   
 
- /* RESPONSIVE */
-/* TÉLÉPHONE */
-@media screen and (max-width: 767px) {
-  .navLogo {
-      width: 40px;
-      height: 40px;
-      display: block;
+  .responsiveTacos img,  .responsiveTacosbowl img, .responsiveKapsalon img, .responsiveAssiette img, .responsiveCarbonnade img{
+    display: none;
   }
-.navbar{
-  height: 50px;
-}
-  .navLogo img {
-      width: 100%;
-      height: 100%;
-  }
-
-  .burgerMenu {
-      display: block;
-  }
-
-  .navMenu {
-      display: none;
-      flex-direction: column;
-      width: 100%;
-      position: absolute;
-      top: 5vh;
-      left: 0;
-      background-color: #171816ae;
-      color: white;
-      list-style: none;
-      z-index: 999; /* Assurez-vous que le menu est au-dessus des autres éléments */
-  }
-
-  .navMenu.active {
-      display: flex;
-  }
-
-  .menuDeroulant {
-      display: none;
-      flex-direction: column;
-      list-style: none;
-      color: white;
-      /* background-color: #171816ae;  */
-  }
-
-  .submenu .menuDeroulant {
-      position: static; /* Assurez-vous que les sous-menus sont positionnés statiquement */
-  }
-
-  .submenu:hover .menuDeroulant,
-  .submenu .menuDeroulant.active {
-      display: flex;
-  }
-
-  .navMenu li {
-      width: 100%;
-      text-align: center;
-      padding: 10px;
-      color: white;
-  }
-.logoHome{
-  display: none;
-}
-  .burger-menu img {
-      height: 40px;
-      width: 40px;
-  }
-
-  .navMenu a, .menuDeroulant a {
-      color: white;
-      text-decoration: none;
-      padding: 10px; /* Ajoutez du padding pour les liens du menu */
-  }
-
-  .navMenu a:hover, .menuDeroulant a:hover {
-      background-color: #f1f1f1;
-      color: black;
-  }
-}
-
  
-.responsiveTacos,  .responsiveTacosbowl, .responsiveKapsalon, .responsiveAssiette, .responsiveCarbonnade{
+.responsiveTacos ,  .responsiveTacosbowl, .responsiveKapsalon, .responsiveAssiette, .responsiveCarbonnade{
   display: none;
 }
      
@@ -414,36 +328,10 @@
     text-align: center;
   }
   
-  /* .titreassiette {
-    width: 50vw;
-    height: 100vh;
-    color: #5A7C2A;
-  }
-   */
-  /* .h2assiette {
-    height: 65vh;
-    width: 50vw;
-    margin-left: -3vw;
-    margin-top: 5vh;
-  } */
+
   .h2{
     font-size: 1.8em;
   }
-  /* .descriptionAssiettes{
-    color: white;
-    font-size: 1.2em;
-    width: 40vw;
-    margin-left: 5vw;
-    margin-top: 3vh;
-  } */
-  /* .prix-containerAssiette {
-    height: 35vh;
-    width: 50vw;
-    display: flex;
-    justify-content: flex-start; 
-    align-items: center;
-    margin-left: -50px; 
-  } */
   
   .prix {
     display: flex;
@@ -499,24 +387,6 @@
   .viandes img{
     height: 100px; 
   }
-/*   
-  .h2suppAssiette{
-    height: 10vh;
-    width: 50vw;
-    color: #5A7C2A;
-    font-size: 1.8em;
-    margin-top: 40px;
-  }
-  .supplémentsassiette{
-    height: 30vh;
-    width: 35vw;
-    margin-top: -3vh;
-    margin-left: 7vw;
-  }
-  
-  .supplémentsassiette img{
-    height: 100px; 
-  } */
   
   .optionsupp{
     height: 20vh;
@@ -708,6 +578,87 @@
     visibility: visible;
 }
 
+
+
+ /* RESPONSIVE MENU BURGER*/
+/* TÉLÉPHONE */
+@media screen and (max-width: 767px) {
+  .navLogo {
+      width: 40px;
+      height: 40px;
+      display: block;
+  }
+.navbar{
+  height: 50px;
+}
+  .navLogo img {
+      width: 100%;
+      height: 100%;
+  }
+
+  .burgerMenu {
+      display: block;
+  }
+
+  .navMenu {
+      display: none;
+      flex-direction: column;
+      width: 100%;
+      position: absolute;
+      top: 5vh;
+      left: 0;
+      background-color: #171816ae;
+      color: white;
+      list-style: none;
+      z-index: 999; /* Assurez-vous que le menu est au-dessus des autres éléments */
+  }
+
+  .navMenu.active {
+      display: flex;
+  }
+
+  .menuDeroulant {
+      display: none;
+      flex-direction: column;
+      list-style: none;
+      color: white;
+      /* background-color: #171816ae;  */
+  }
+
+  .submenu .menuDeroulant {
+      position: static; /* Assurez-vous que les sous-menus sont positionnés statiquement */
+  }
+
+  .submenu:hover .menuDeroulant,
+  .submenu .menuDeroulant.active {
+      display: flex;
+  }
+
+  .navMenu li {
+      width: 100%;
+      text-align: center;
+      padding: 10px;
+      color: white;
+  }
+.logoHome{
+  display: none;
+}
+  .burger-menu img {
+      height: 40px;
+      width: 40px;
+  }
+
+  .navMenu a, .menuDeroulant a {
+      color: white;
+      text-decoration: none;
+      padding: 10px; /* Ajoutez du padding pour les liens du menu */
+  }
+
+  .navMenu a:hover, .menuDeroulant a:hover {
+      background-color: #f1f1f1;
+      color: black;
+  }
+}
 
 /* RESPONSIVEEEEEEEEEEEEEEEEEEE */
 /* TÉLÉPHONE */
