--- a/Style/connexion.css
+++ b/Style/connexion.css
@@ -2,27 +2,28 @@ body {
     background-image: url(../img/backfood.png);
     display: flex;
     flex-direction: column;
-    align-items: center; 
+    align-items: center;
     padding: 20px;
-    border-radius: 10px;
     text-align: center;
     margin-top: 50px;
 }
 
-.logoHome{
-   left: 2%;
-   top: 2%;
-   position: absolute;
-  }
+.logoHome {
+    left: 2%;
+    top: 2%;
+    position: absolute;
+}
 
-  .logoHome img{
+.logoHome img {
     width: 40px;
     height: 40px;
-  }
-  .logoHome:hover{
+}
+
+.logoHome:hover {
     transform: scale(1.08); 
-  }
-h2{
+}
+
+h2 {
     font-size: 2.6em;
     color: white;
     letter-spacing: 7px;
@@ -35,22 +36,36 @@ label {
     font-size: 1.5em; 
 }
 
-.connect{
+.connect {
     background-color: rgba(0, 0, 0, 0.381);
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Taille des écrans normaux */
+.connect {
     height: 80vh;
     width: 30vw;
 }
 
-input{
-    width: 150px;
+input {
+    width: 80%;
+    max-width: 300px;
     padding: 10px;
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 5px;
-   margin-top: 20px;
+    margin-top: 20px;
 }
+
 button {
-    width: 120px;
+    width: 80%;
+    max-width: 200px;
     padding: 10px;
     background-color: #5A7C2A;
     color: white;
@@ -58,12 +73,83 @@ button {
     border-radius: 5px;
     cursor: pointer;
     font-size: 1em;
-    margin-left: -55px; 
 }
+
 button:hover {
     background-color: #0056b3;
 }
+
 .error-message {
     color: red;
     margin-bottom: 15px;
+}
+
+.containerCaptacha {
+    margin-top: 15px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+}/* Responsivité pour les petits écrans */
+@media screen and (max-width: 767px) {
+    .connect {
+        width: 70vw;
+        height: auto;
+        padding: 20px;
+    }
+
+    h2 {
+        font-size: 2em;
+        letter-spacing: 5px;
+    }
+
+    label {
+        font-size: 1.2em;
+    }
+
+    input, button {
+        width: 60vw;
+        max-width: none;
+        margin-left: 0;
+    }
+
+    .containerCaptacha {
+        width: 100%;
+        justify-content: center;
+    }
+}
+
+
+/* Responsivité pour les tablettes */
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .connect {
+        width: 70vw;
+        height: auto;
+        padding: 20px;
+    }
+
+    h2 {
+        font-size: 2.5em;
+        letter-spacing: 6px;
+    }
+
+    label {
+        font-size: 1.6em;
+    }
+
+    input {
+        width: 70vw;
+        max-width: 300px;
+    }
+
+    button {
+        width: 90%;
+        max-width: 200px;
+    }
+
+    .containerCaptacha {
+        width: 100%;
+        justify-content: center;
+    }
 }
